# Qflow

./: .gitignore  README.md  band.yaml  config.yaml  config_bte.yaml  prepare_bte_structures.py  pyproject.toml  qflow  tasks.db  worker.slurm
.claude/: settings.local.json
infile/: config.yaml
src/qflow/: __init__.py  cli.py  logger.py  manager.py  phonon_utils.py  queue_manager.py  remote.py  submit_registry.py  task_db.py  template.py  utils.py  worker.py
src/qflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test_structures/mp-10172/: info.txt
test_structures/mp-10172/opt/: CONTCAR  energy.txt
test_structures/mp-10172/volume_0.98/analyze/: phonopy_disp.yaml  phonopy_params.yaml  thermo_properties.yaml
test_structures/mp-10172/volume_0.98/task.000000/: POSCAR  energy.txt  forces.txt
test_structures/mp-10172/volume_0.98/task_perfect/: POSCAR
test_structures/mp-10172/volume_0.99/analyze/: phonopy_disp.yaml  phonopy_params.yaml  thermo_properties.yaml
test_structures/mp-10172/volume_0.99/task.000000/: POSCAR  energy.txt  forces.txt
test_structures/mp-10172/volume_0.99/task_perfect/: POSCAR
test_structures/mp-10172/volume_1.0/analyze/: phonopy_disp.yaml  phonopy_params.yaml  thermo_properties.yaml
test_structures/mp-10172/volume_1.0/task.000000/: POSCAR  energy.txt  forces.txt
test_structures/mp-10172/volume_1.0/task_perfect/: POSCAR
test_structures/mp-1022/: info.txt
test_structures/mp-1022/opt/: CONTCAR  energy.txt
test_structures/mp-1087/: info.txt
test_structures/mp-1087/opt/: CONTCAR  energy.txt
(+111 files in other folders)
